--- a/lab-6.qmd
+++ b/lab-6.qmd
@@ -2,36 +2,27 @@
 title: "Lab 6 - Spicy"
 subtitle: "Performing Many Different Versions of an Analysis"
 editor: source
+embed-resources: true
 ---
 
-This assignment will challenge your function writing abilities. I'm not going 
-to lie, these functions are difficult but well within your reach. I do, however,
-want to recognize that not everyone is interested in being a "virtuoso" with 
-their function writing. So, there are two options for this week's lab:
+This assignment will challenge your function writing abilities. I'm not going to lie, these functions are difficult but well within your reach. I do, however, want to recognize that not everyone is interested in being a "virtuoso" with their function writing. So, there are two options for this week's lab:
 
-- **Option 1:** Complete this lab assignment in search of virtuoso status with
-your function writing
-- **Option 2:** Complete one of the difficult functions (Exercise 1 or Exercise
-2) and complete the "Alternative Lab 6". 
+-   **Option 1:** Complete this lab assignment in search of virtuoso status with your function writing
+-   **Option 2:** Complete one of the difficult functions (Exercise 1 or Exercise 2) and complete the "Alternative Lab 6".
 
 # Setting the Stage
 
-My number one use case for writing functions and iteration / looping is to
-perform some exploration or modeling repeatedly for different "tweaked"
-versions. For example, our broad goal might be to fit a linear regression model
-to our data. However, there are often multiple choices that we have to make in
-practice:
+My number one use case for writing functions and iteration / looping is to perform some exploration or modeling repeatedly for different "tweaked" versions. For example, our broad goal might be to fit a linear regression model to our data. However, there are often multiple choices that we have to make in practice:
 
-- Keep missing values or fill them in (imputation)? 
-- Filter out outliers in one or more variables?
+-   Keep missing values or fill them in (imputation)?
+-   Filter out outliers in one or more variables?
 
 We can map these choices to **arguments** in a custom model-fitting function:
 
-- `impute`: TRUE or FALSE
-- `remove_outliers`: TRUE or FALSE
+-   `impute`: TRUE or FALSE
+-   `remove_outliers`: TRUE or FALSE
 
-A function that implements the analysis and allows for variation in these 
-choices:
+A function that implements the analysis and allows for variation in these choices:
 
 ```{r}
 #| echo: true
@@ -53,18 +44,58 @@ fit_model <- function(df, impute, remove_outliers, mod) {
 
 # Helper Functions
 
-**Exercise 1:** Write a function that removes outliers in a dataset. The user
-should be able to supply the dataset, the variables to remove outliers from, and
-a threshold on the number of SDs away from the mean used to define outliers. 
-*Hint 1: You will need to calculate a z-score to filter the values!*
-*Hint 2: You might want to consider specifying a default value (e.g., 3) for `sd_thresh`.*
+**Exercise 1:** Write a function that removes outliers in a dataset. The user should be able to supply the dataset, the variables to remove outliers from, and a threshold on the number of SDs away from the mean used to define outliers. *Hint 1: You will need to calculate a z-score to filter the values!* *Hint 2: You might want to consider specifying a default value (e.g., 3) for `sd_thresh`.*
 
 ```{r}
 #| label: exercise-1
 
+remove_outliers <- function(df, ..., sd_thresh = 3) {
+  
+  selected_cols <- rlang::enquos(...) #suggested by discord, specify rlang after class discussion
+
+  # make sure that at least one variable input
+  if (length(selected_cols) == 0) {
+    stop("Specify at least one variable to remove outliers from")
+  }
+
+  df_filtered <- df
+
+  for (col_quo in selected_cols) {
+    # column names as string to filter 
+    col_name <- rlang::as_name(col_quo)
+
+    #make sure column is in df
+    if (!col_name %in% names(df_filtered)) {
+      warning(paste(col_name, "not found in the dataframe. Skipping."))
+      next
+    }
+    
+    # vectorize to check numeric (ChatGPT helped with this part)
+    col_vec <- df_filtered[[col_name]]
+
+    # check if numeric
+    if (!is.numeric(col_vec)) {
+      warning(paste(col_name, "is not numeric. Skipping."))
+      next
+    }
+
+    col_mean <- mean(col_vec, na.rm = TRUE)
+    col_sd <- sd(col_vec, na.rm = TRUE)
+
+    z_scores <- (col_vec - col_mean) / col_sd
+
+    # identify obs that are ouliers
+    remove <- abs(z_scores) >= sd_thresh
+
+    # Filter the dataframe
+    df_filtered <- df_filtered[-remove, ]
+  }
+
+  return(df_filtered)
+}
 ```
 
-## Testing Your Function! 
+## Testing Your Function!
 
 ```{r}
 #| label: exercise-1-test
@@ -89,13 +120,16 @@ remove_outliers(diamonds,
                 y, 
                 z, 
                 sd_thresh = 2)
+
+## Demonstrating error message for not-found column 
+remove_outliers(diamonds, 
+                lol, 
+                x, 
+                y, 
+                z)
 ```
 
-**Exercise 2:** Write a function that imputes missing values for numeric 
-variables in a dataset. The user should be able to supply the dataset, the 
-variables to impute values for, and a function to use when imputing. 
-*Hint 1: You will need to use `across()` to apply your function, since the user can input multiple variables.*
-*Hint 2: The `replace_na()` function is helpful here!*
+**Exercise 2:** Write a function that imputes missing values for numeric variables in a dataset. The user should be able to supply the dataset, the variables to impute values for, and a function to use when imputing. *Hint 1: You will need to use `across()` to apply your function, since the user can input multiple variables.* *Hint 2: The `replace_na()` function is helpful here!*
 
 ```{r}
 #| label: exercise-2
@@ -103,7 +137,7 @@ variables to impute values for, and a function to use when imputing.
 
 ```
 
-## Testing Your Function! 
+## Testing Your Function!
 
 ```{r}
 #| label: exercise-2-test
@@ -128,16 +162,12 @@ impute_missing(nycflights13::flights,
 
 # Primary Function
 
-**Exercise 3:** Write a `fit_model()` function that fits a specified linear
-regression model for a specified dataset. The function should:
+**Exercise 3:** Write a `fit_model()` function that fits a specified linear regression model for a specified dataset. The function should:
 
-- allow the user to specify if outliers should be removed (`TRUE` or `FALSE`)
-- allow the user to specify if missing observations should be imputed
-(`TRUE` or `FALSE`)
+-   allow the user to specify if outliers should be removed (`TRUE` or `FALSE`)
+-   allow the user to specify if missing observations should be imputed (`TRUE` or `FALSE`)
 
-If either option is `TRUE`, your function should call your `remove_outliers()`
-or `impute_missing()` functions to modify the data **before** the regression 
-model is fit. 
+If either option is `TRUE`, your function should call your `remove_outliers()` or `impute_missing()` functions to modify the data **before** the regression model is fit.
 
 ```{r}
 #| label: exercise-3
@@ -145,7 +175,7 @@ model is fit.
 
 ```
 
-## Testing Your Function! 
+## Testing Your Function!
 
 ```{r}
 #| label: exercise-3-test
@@ -162,28 +192,22 @@ fit_model(
 
 # Iteration
 
-In the `diamonds` dataset, we want to understand the relationship between
-`price` and size (`carat`). We want to explore variation along two choices:
+In the `diamonds` dataset, we want to understand the relationship between `price` and size (`carat`). We want to explore variation along two choices:
 
-1. The variables included in the model. We'll explore 3 sets of variables:
-    - No further variables (just `price` and `carat`)
-    - Adjusting for `cut`
-    - Adjusting for `cut` and `clarity`
-    - Adjusting for `cut`, `clarity`, and `color`
+1.  The variables included in the model. We'll explore 3 sets of variables:
 
-2. Whether or not to impute missing values
+    -   No further variables (just `price` and `carat`)
+    -   Adjusting for `cut`
+    -   Adjusting for `cut` and `clarity`
+    -   Adjusting for `cut`, `clarity`, and `color`
 
-3. Whether or not to remove outliers in the `carat` variable (we'll define
-outliers as cases whose `carat` is over 3 SDs away from the mean).
+2.  Whether or not to impute missing values
+
+3.  Whether or not to remove outliers in the `carat` variable (we'll define outliers as cases whose `carat` is over 3 SDs away from the mean).
 
 ## Parameters
 
-First, we need to define the set of parameters we want to iterate the
-`fit_model()` function over. The `tidyr` package has a useful function called
-`crossing()` that is useful for generating argument combinations. For each
-argument, we specify all possible values for that argument and `crossing()` 
-generates all combinations. 
-*Note that you can create a list of formula objects in R with `c(y ~ x1, y ~ x1 + x2)`.*
+First, we need to define the set of parameters we want to iterate the `fit_model()` function over. The `tidyr` package has a useful function called `crossing()` that is useful for generating argument combinations. For each argument, we specify all possible values for that argument and `crossing()` generates all combinations. *Note that you can create a list of formula objects in R with `c(y ~ x1, y ~ x1 + x2)`.*
 
 ```{r}
 #| label: example-crossing-arguments
@@ -198,8 +222,7 @@ df_arg_combos <- crossing(
 df_arg_combos
 ```
 
-**Exercise 4:** Use `crossing()` to create the data frame of argument
-combinations for our analyses. 
+**Exercise 4:** Use `crossing()` to create the data frame of argument combinations for our analyses.
 
 ```{r}
 #| label: exercise-4
@@ -208,14 +231,12 @@ combinations for our analyses.
 
 ## Iterating Over the Parameters
 
-We've arrived at the final step! 
+We've arrived at the final step!
 
-**Exercise 5:** Use `pmap()` from `purrr` to apply the `fit_model()` function to
-every combination of arguments from `diamonds.
+**Exercise 5:** Use `pmap()` from `purrr` to apply the `fit_model()` function to every combination of arguments from \`diamonds.
 
 ```{r}
 #| label: exercise-5
 
 
 ```
-
